Found out that there was a lot of errors in my graphs, fixed those for final submission.

--- a/p8105_hw3_as6183.md
+++ b/p8105_hw3_as6183.md
@@ -20,31 +20,6 @@ library(tidyverse)
     ## x dplyr::lag()    masks stats::lag()
 
 ``` r
-library(plyr)
-```
-
-    ## ------------------------------------------------------------------------------
-
-    ## You have loaded plyr after dplyr - this is likely to cause problems.
-    ## If you need functions from both plyr and dplyr, please load plyr first, then dplyr:
-    ## library(plyr); library(dplyr)
-
-    ## ------------------------------------------------------------------------------
-
-    ## 
-    ## Attaching package: 'plyr'
-
-    ## The following objects are masked from 'package:dplyr':
-    ## 
-    ##     arrange, count, desc, failwith, id, mutate, rename, summarise,
-    ##     summarize
-
-    ## The following object is masked from 'package:purrr':
-    ## 
-    ##     compact
-
-``` r
-library(dplyr)
 data("instacart") #loading instacart data set
 ```
 
@@ -58,27 +33,28 @@ customer is buying what, and the department to analyze which category of
 items are getting purchased most/least frequently.
 
 ``` r
-number_aisles = count(instacart,vars=c('aisle','aisle_id'))%>%
+number_aisles = instacart%>%
+  dplyr::count(aisle)%>%
   nrow() #named variable number_aisles because it gives the number of aisles in the data set
 
 most_ordered = instacart%>%
-  count(vars=c('aisle','aisle_id'))%>%
-  top_n(3,wt=freq)  #named variable most_ordered because it gives the three aisles that have the most orders in the data set
+  dplyr::count(aisle)%>%
+  top_n(3,wt=n)  #named variable most_ordered because it gives the three aisles that have the most orders in the data set
 ```
 
 There are 134 aisles and the top 3 aisles that have the most orders are
 fresh fruits, fresh vegetables, packaged vegetables fruits.
 
 ``` r
-library(ggplot2)
-aisles_10000 = instacart%>%
-  count(vars=c('aisle','aisle_id'))%>%
-  filter(freq>10000) #named variable aisles_10000 because it only contains aisles in the data set with more than 10,000 orders
-
-ggplot(aisles_10000,aes(x=aisle,y=freq))+
+instacart%>%
+  dplyr::count(aisle)%>%
+  filter(n>10000)%>%
+  mutate(aisle = factor(aisle))%>%
+  mutate(aisle = fct_reorder(aisle,n))%>%
+ggplot(aes(x=aisle,y=n))+
   geom_bar(stat="identity")+
   theme_bw()+
-  theme(axis.text.x = element_text(size=8,angle=90),plot.title=element_text(size=11))+
+  theme(axis.text.x = element_text(size=8,angle=90,vjust = 0.5, hjust = 1),plot.title=element_text(size=11))+
   xlab("Aisle Name")+
   ylab("Number of Items Ordered")+
   ggtitle("Distribution of the number of items ordered for aisles with over 10,000 orders")
@@ -99,39 +75,36 @@ the case of paper goods contain items that only specific shoppers need.
 ``` r
 #library(data.table)
 data_bi_dfc_pvf = instacart%>%
-  filter(aisle=="baking ingredients"|aisle=="dog food care"|aisle=="packaged vegetables fruits") #named variable this to indicate that this is a subset of the instacart data set only containg the aisles: baking ingredients (bi), dog food care (dfc), and packaged vegetables fruits (pvf).
+  filter(
+    aisle=="baking ingredients"|
+    aisle=="dog food care"|
+    aisle=="packaged vegetables fruits"
+         ) #named variable this to indicate that this is a subset of the instacart data set only containing the aisles: baking ingredients (bi), dog food care (dfc), and packaged vegetables fruits (pvf).
 
 most_popular = data_bi_dfc_pvf%>%
-  count(vars=c('aisle','product_name')) #named variable most_popular to indicate that the variable gives information about the most popular aisles that customers order from
-
-most_popular = most_popular%>%
+  dplyr::count(aisle,product_name)%>%
   group_by(aisle)%>%
-  dplyr::arrange(desc(freq),by_group=T)%>%
-  top_n(n=3,wt=freq)
+  dplyr::arrange(desc(n),by_group=T)%>%
+  top_n(n=3,wt=n) #named variable most_popular to indicate that the variable gives information about the most popular aisles that customers order from
 
-summarise(most_popular,Aisle = aisle,Product = product_name, `Times Ordered` = freq)
+most_popular%>%
+  dplyr::summarise(Product = product_name, `Times Ordered` = n)%>%
+  knitr::kable()
 ```
 
-    ##                        Aisle                                       Product
-    ## 1 packaged vegetables fruits                          Organic Baby Spinach
-    ## 2 packaged vegetables fruits                           Organic Raspberries
-    ## 3 packaged vegetables fruits                           Organic Blueberries
-    ## 4         baking ingredients                             Light Brown Sugar
-    ## 5         baking ingredients                              Pure Baking Soda
-    ## 6         baking ingredients                                    Cane Sugar
-    ## 7              dog food care Snack Sticks Chicken & Rice Recipe Dog Treats
-    ## 8              dog food care           Organix Chicken & Brown Rice Recipe
-    ## 9              dog food care                            Small Dog Biscuits
-    ##   Times Ordered
-    ## 1          9784
-    ## 2          5546
-    ## 3          4966
-    ## 4           499
-    ## 5           387
-    ## 6           336
-    ## 7            30
-    ## 8            28
-    ## 9            26
+    ## `summarise()` regrouping output by 'aisle' (override with `.groups` argument)
+
+| aisle                      | Product                                       | Times Ordered |
+| :------------------------- | :-------------------------------------------- | ------------: |
+| baking ingredients         | Light Brown Sugar                             |           499 |
+| baking ingredients         | Pure Baking Soda                              |           387 |
+| baking ingredients         | Cane Sugar                                    |           336 |
+| dog food care              | Snack Sticks Chicken & Rice Recipe Dog Treats |            30 |
+| dog food care              | Organix Chicken & Brown Rice Recipe           |            28 |
+| dog food care              | Small Dog Biscuits                            |            26 |
+| packaged vegetables fruits | Organic Baby Spinach                          |          9784 |
+| packaged vegetables fruits | Organic Raspberries                           |          5546 |
+| packaged vegetables fruits | Organic Blueberries                           |          4966 |
 
 This table shows the three most popular items from the packaged
 vegetables fruits, baking ingredients, and dog food care aisles. Organic
@@ -156,14 +129,14 @@ table = dplyr::summarise(pink_lady_coffee_ice_cream,mean=mean(order_hour_of_day)
 
 ``` r
 colnames(table) = c("Product Name", "Monday", "Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday")
-table
+table%>%
+  knitr::kable()
 ```
 
-    ## # A tibble: 2 x 8
-    ##   `Product Name`   Monday Tuesday Wednesday Thursday Friday Saturday Sunday
-    ##   <chr>             <dbl>   <dbl>     <dbl>    <dbl>  <dbl>    <dbl>  <dbl>
-    ## 1 Coffee Ice Cream   13.8    14.3      15.4     15.3   15.2     12.3   13.8
-    ## 2 Pink Lady Apples   13.4    11.4      11.7     14.2   11.6     12.8   11.9
+| Product Name     |   Monday |  Tuesday | Wednesday | Thursday |   Friday | Saturday |   Sunday |
+| :--------------- | -------: | -------: | --------: | -------: | -------: | -------: | -------: |
+| Coffee Ice Cream | 13.77419 | 14.31579 |  15.38095 | 15.31818 | 15.21739 | 12.26316 | 13.83333 |
+| Pink Lady Apples | 13.44118 | 11.36000 |  11.70213 | 14.25000 | 11.55172 | 12.78431 | 11.93750 |
 
 This table shows the mean hour of the day when Coffee Ice Cream and Pink
 Lady Apples are ordered for every day of the week. The average hour that
@@ -175,8 +148,7 @@ compared to Pink Lady Apples.
 # Problem 2:
 
 ``` r
-setwd("/Users/13038/Downloads")
-accel = read.csv("accel_data.csv") #reading in accel data set, named variable the same name as the data set.
+accel = read.csv("./p8105_hw3_as6183_files/data/accel_data.csv") #reading in accel data set, named variable the same name as the data set.
 accel = accel%>%
   mutate(week = factor(week))%>%
   mutate(weekday_weekend = factor(recode(day,Monday="Weekday",Tuesday="Weekday",Wednesday="Weekday",Thursday="Weekday",Friday="Weekday",Saturday="Weekend",Sunday="Weekend")))%>%
@@ -199,86 +171,69 @@ would be easier to manipulate in the next step when I have to aggregate
 all of the activity’s together by day.
 
 ``` r
-total_activity_per_day=aggregate(pull(accel,Activity_Counts),by = list(pull(accel,week),pull(accel,day)),FUN=sum) #named variable total_activity_per_day as it aggregates information from the accel data set to give the total amount of activity the patient did per day instead of per minute. 
-accel = accel %>%
-  pivot_wider(names_from="Activity_Minute",values_from="Activity_Counts")%>%
-  mutate(total_activity_per_day = pull(total_activity_per_day,x))%>%
-  group_by(week)%>%
-  dplyr::arrange(desc(total_activity_per_day),by_group=T)
-summarise(.data=accel,Week=week,Day=day,Total_Activity_Per_Day=total_activity_per_day)
+accel %>%
+  group_by(week,day) %>%
+  dplyr::summarize(total_activity_per_day = sum(Activity_Counts))%>%
+  pivot_wider(names_from = day,values_from = total_activity_per_day) %>%
+  knitr::kable()
 ```
 
-    ##    Week       Day Total_Activity_Per_Day
-    ## 1     2    Friday              685910.00
-    ## 2     3    Monday              631105.00
-    ## 3     1  Thursday              620860.00
-    ## 4     2  Thursday              607175.00
-    ## 5     1    Monday              568839.00
-    ## 6     4    Sunday              549658.00
-    ## 7     1    Friday              480542.62
-    ## 8     4    Friday              474048.00
-    ## 9     5  Thursday              468869.00
-    ## 10    1  Saturday              467420.00
-    ## 11    3    Sunday              467052.00
-    ## 12    5 Wednesday              445366.00
-    ## 13    5    Sunday              440962.00
-    ## 14    5   Tuesday              434460.00
-    ## 15    4   Tuesday              423245.00
-    ## 16    3  Saturday              422018.00
-    ## 17    2    Monday              409450.00
-    ## 18    2  Saturday              389080.00
-    ## 19    2   Tuesday              382928.00
-    ## 20    4 Wednesday              381507.00
-    ## 21    2    Sunday              376254.00
-    ## 22    4    Monday              371230.00
-    ## 23    5    Monday              367824.00
-    ## 24    3 Wednesday              355923.64
-    ## 25    4  Saturday              340291.00
-    ## 26    5  Saturday              340115.01
-    ## 27    5    Friday              319568.00
-    ## 28    4  Thursday              307094.24
-    ## 29    1 Wednesday              295431.00
-    ## 30    3  Thursday              260617.00
-    ## 31    1    Sunday              154049.00
-    ## 32    3   Tuesday              138421.00
-    ## 33    1   Tuesday               78828.07
-    ## 34    2 Wednesday                1440.00
-    ## 35    3    Friday                1440.00
+    ## `summarise()` regrouping output by 'week' (override with `.groups` argument)
+
+| week |   Friday |    Monday | Saturday | Sunday | Thursday |  Tuesday | Wednesday |
+| :--- | -------: | --------: | -------: | -----: | -------: | -------: | --------: |
+| 1    | 480542.6 |  78828.07 |   376254 | 631105 | 355923.6 | 307094.2 |    340115 |
+| 2    | 568839.0 | 295431.00 |   607175 | 422018 | 474048.0 | 423245.0 |    440962 |
+| 3    | 467420.0 | 685910.00 |   382928 | 467052 | 371230.0 | 381507.0 |    468869 |
+| 4    | 154049.0 | 409450.00 |     1440 | 260617 | 340291.0 | 319568.0 |    434460 |
+| 5    | 620860.0 | 389080.00 |     1440 | 138421 | 549658.0 | 367824.0 |    445366 |
 
 The table above shows the total activity per day for each day that
-accelerometer data was recorded,ordered by descending total activity per
-day so I can analyze which days of the week have higher or lower
-activity. A trend that is apparent to me is that the total activity
-seems to be higher, in general, on Thursdays and Fridays when compared
-to other days of the week. Furthermore, it seems that Tuesdays are a
-very low activity day for this person judging from the table.
+accelerometer data was recorded. A trend that is apparent to me is that
+the total activity seems to be higher, in general, on Fridays when
+compared to other days of the week. Furthermore, it seems that Tuesdays
+and Wednesdays are very low activity days for this person judging from
+the table. On the last two Saturdays recorded, there is also a very low
+amount of total activity. This could be because the patient forgot to
+wear the device on those days.
 
 ``` r
-ggplot(data=accel,aes(x=day_id,y=total_activity_per_day,color=day))+
-  geom_point(size=3)+
-  xlab("Day ID")+
-  ylab("Total Activity Per Day")+
-  ggtitle("Total Activity Measured Per Day Over 5 Weeks")
+accel%>%
+  mutate(Activity_Minute = str_remove_all(Activity_Minute,"activity."))%>%
+  mutate(Activity_Minute = as.integer(Activity_Minute))%>%
+  ggplot(aes(x=Activity_Minute,y=Activity_Counts,color=day))+
+  geom_line()+
+  xlab("Time of Day (Minutes) with 0 indicating 12:00 AM")+
+  ylab("Activity Time Courses")+
+  ggtitle("Activity Measured Per Day Over 5 Weeks")
 ```
 
 ![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-8-1.png)<!-- -->
 
-From this plot, I see a very similar pattern to the table above in that
-Thursday and Fridays seem to have more activity whereas Tuesdays seem to
-have the least activity, in general. There also seems to be two outliers
-in week 2 on Wednesday and Friday of that week which could indicate that
-the patient did not wear the accelerometer on those days. Another thing
-I noticed is that the activity totals were more spread out by day
-initally but in the later days of the study the total activity per day
-was more consistent. This could be due to the patient developing an
-activity routine and thus becoming more consistent throughout the week
-with his activity as a result.
+This plot shows the activity time courses for every day recorded for
+every minute of each day. From the plot, there is a clear trend that the
+activity is very low to start with and increases throughout the day
+which makes sense since most people are generally asleep at the very
+beginning of the day and would thus not be doing any activity at that
+time. Furthermore, there is a clear spike in activity around evening
+time, which could be the time that the patient gets off work and thus he
+could have more time to be active at that particular time in the day.
+Finally, we can see that Wednesday and Saturday are the two days with
+the lowest activity which corresponds to what we saw in the table above.
+The low amount of activity on Saturday in this graph could, again, be
+due to the two outliers we saw in the total activity table above.
 
 # Problem 3:
 
 ``` r
 library(p8105.datasets)
 data("ny_noaa") #reading in ny_noaa data set
+missing_data = data.frame(
+  Columns = colnames(ny_noaa),
+  Rows_Missing_Data = colSums(is.na(ny_noaa))
+  )%>%
+  dplyr::summarise(Columns = Columns, `Number of Rows Missing Data` = Rows_Missing_Data)%>%
+  knitr::kable() #variable gives tabular information on number of rows missing in ny_noaa data set per column
 ```
 
 The ny\_noaa data set contains 2595176 rows and 7 columns. The data set
@@ -287,105 +242,149 @@ precipitation in tenths of a mm (prcp), snowfall in mm (snow), snow
 depth in mm (snwd), maximum temperature (tmax), minimum temperature
 (tmin), as well as the date (date) and station (id) where the
 information was collected. Missing data is definitely an issue in this
-data set as there are 0, 0, 1.4583810^{5}, 3.8122110^{5}, 5.9178610^{5},
-1.13435810^{6}, 1.1344210^{6} rows by column in the data set that
-contain missing values. Some of these columns have almost 50% of the
-data missing which is a very large amount.
+data set as shown in the missing data by column table below.
+
+| Columns | Number of Rows Missing Data |
+| :------ | --------------------------: |
+| id      |                           0 |
+| date    |                           0 |
+| prcp    |                      145838 |
+| snow    |                      381221 |
+| snwd    |                      591786 |
+| tmax    |                     1134358 |
+| tmin    |                     1134420 |
+
+As shown in the table, some of these columns have almost 50% of the data
+missing which is a very large amount.
 
 ``` r
-ny_noaa=separate(ny_noaa,col="date",into=c("year","month","day"),sep="-")
-ny_noaa=ny_noaa%>%
+ny_noaa=separate(ny_noaa,col="date",into=c("year","month","day"),sep="-")%>%
   dplyr::arrange(year,month)%>%
-  mutate(prcp=prcp/100,snow=snow/10,snwd=snwd/10,tmax=as.integer(tmax)/10,tmin=as.integer(tmin)/10) #converted length measurements to centimeters and temperature measurements to degrees from tenths of a degree
-freq_snowfall = data.frame(table(pull(ny_noaa,snow)))%>%
-  top_n(n=3,wt=Freq)#named variable freq_snowfall because it gives the frequency of snowfall measures
+  mutate(
+    prcp=prcp/10,
+    snow=snow,
+    snwd=snwd,
+    tmax=as.numeric(tmax)/10,
+    tmin=as.numeric(tmin)/10
+         ) #converted length measurements to millimeters and temperature measurements to degrees Celsius
+freq_snowfall = ny_noaa%>%
+  dplyr::count(snow)%>%
+  top_n(n=3,wt=n)%>%
+  dplyr::arrange(desc(n))%>%
+  dplyr::summarise(`Snowfall (mm)` = snow, `Number of Observations` = n)%>%
+  knitr::kable() #named variable freq_snowfall because it gives the frequency of snowfall measures
 ```
 
-For snowfall, the most commonly observed values are 0, 1.3, 2.5 cm. This
-is probably because there is not that much snow between the months of
-April through October or November in most areas of the United States,
-including New York. Therefore, for most of the year you will see 0 cm or
-a low amount, such as 1.3 or 2.5 cm, of snowfall recorded which is why
-it makes sense that 0, 1.3, and 2.5 cm are the most commonly observed
-values for snowfall.
+For snowfall, the most commonly observed values are shown in this table:
+
+| Snowfall (mm) | Number of Observations |
+| ------------: | ---------------------: |
+|             0 |                2008508 |
+|            NA |                 381221 |
+|            25 |                  31022 |
+
+This is probably because there is not that much snow between the months
+of April through October or November in most areas of the United States,
+including New York. Therefore, for most of the year you will see 0 mm of
+snowfall recorded which is why it makes sense that 0 mm is the most
+commonly observed value for snowfall. The NA is the second most common
+missing value due to the large amount of missing data in the dataset.
 
 ``` r
-data_avg_tmax = aggregate(pull(ny_noaa,tmax),by = list(pull(ny_noaa,month),pull(ny_noaa,year),pull(ny_noaa,id)),FUN=mean,na.rm=T) #named variable data_avg_tmax because it is a data subset from the ny_noaa data set that aggregates information about the maximum temperature by the mean.
-data_avg_tmax = filter(data_avg_tmax,Group.1=="01"|Group.1=="07")
-data_avg_tmax = data_avg_tmax%>%
-  mutate(Group.1 = recode(Group.1,"01"="January","07"="July"))
-data_avg_tmax = na.omit(data_avg_tmax)
-ggplot(data_avg_tmax, aes(x = Group.2, y = x)) +
-  geom_boxplot()+
-  facet_grid(. ~ Group.1)+
+data_avg_tmax = ny_noaa%>%
+  group_by(year,month,id)%>%
+  dplyr::summarise(avg_tmax = mean(tmax,na.rm=T))%>%
+  filter(month=="01"|month=="07")%>%
+  mutate(month = recode(month,"01"="January","07"="July")) #named variable data_avg_tmax because it is a data subset from the ny_noaa data set that aggregates information about the maximum temperature by the mean.
+```
+
+    ## `summarise()` regrouping output by 'year', 'month' (override with `.groups` argument)
+
+``` r
+ggplot(data_avg_tmax, aes(x = year, y = avg_tmax, color = id)) +
+  geom_point()+
+  facet_grid(. ~ month)+
   theme_bw()+
-  theme(axis.text.x = element_text(size=8,angle=90),plot.title=element_text(size=11))+
+  theme(axis.text.x = element_text(size=8,angle=90,vjust = 0.5, hjust = 1),plot.title=element_text(size=11), legend.position = 'none')+
   xlab("Year")+
   ylab("average Maximum Temperature (degrees Celcius)")+
-  ggtitle("Average Max Temperatures at Each Station in January and July each Year")
+  ggtitle("Scatterplot of Average Max Temperatures at Each Station in January and July each Year")
 ```
+
+    ## Warning: Removed 5970 rows containing missing values (geom_point).
 
 ![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-11-1.png)<!-- -->
 
-This plot shows the average of the maximum temperatures per year in
-January and July at every station in the data set. The average maximum
-temperature for these two months seems to vary every year and does not
-really have a distinct pattern to it. However, there are definitely some
-outliers in the data set. For example, in July of 1988 there is a clear
-outlier as well as January 1982 and January 2005.
-
 ``` r
-#named variable data_tmax_tmin because it seperates the data from ny_noaa by the maximum temperature and minimum temperature, making it easier to create a facet plot in the next step.
-data_tmax_tmin = select(ny_noaa,c("id","year","month","day","tmax","tmin"))%>%
-  pivot_longer(tmax:tmin,names_to="Temperature",values_to="Temperature_Val")%>%
-  mutate(date = paste0(month,"-",day,"-",year))%>%
-  na.omit()%>%
-  select(-c("month","day","year"))
-ggplot(data_tmax_tmin, aes(x = date, y = Temperature_Val)) +
-  geom_line(size=0.25,alpha=0.2)+
-  stat_smooth()+
-  facet_grid(. ~Temperature)+
+ggplot(data_avg_tmax, aes(x = year, y = avg_tmax)) +
+  geom_boxplot()+
+  facet_grid(. ~ month)+
   theme_bw()+
-  theme(axis.text.x = element_blank(),plot.title=element_text(size=10), axis.ticks.x = element_blank())+
-  xlab("Time")+
-  ylab("Temperature(degrees Celcius)")+
-  ggtitle("Max Temperatures and Min Temperatures at Each Station for Each Day In Data Set")
+  theme(axis.text.x = element_text(size=8,angle=90,vjust = 0.5, hjust = 1),plot.title=element_text(size=11), legend.position = 'none')+
+  xlab("Year")+
+  ylab("Average Maximum Temperature (degrees Celsius)")+
+  ggtitle("Boxplot of Average Max Temperatures at Each Station in January and July each Year")
 ```
 
-    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
+    ## Warning: Removed 5970 rows containing non-finite values (stat_boxplot).
+
+![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-11-2.png)<!-- -->
+
+These plots shows the average of the maximum temperatures per year in
+January and July at every station in the data set. The first plot is a
+scatterplot of the data with the color of the dots corresponding to each
+distinct station. The second plot is a boxplot, which I plotted to see
+the median of the average max temperatures over time for comparison
+purposes. The average maximum temperature for these two months seems to
+vary every year and does not really have a distinct pattern to it. As
+expected, however, the median of the average maximum temperatures for
+the stations is lower in January when compared to July consistently.
+Finally, there are definitely some outliers that can be seen in the data
+set from these graphs. For example, in July of 1989,1991, and 2006 there
+are clear outliers that are much colder than normal as well as January
+2005 which has an outlier that is much warmer than normal.
+
+``` r
+library(patchwork)
+library(hexbin)
+# plot of tmax vs tmin
+tmax_tmin_plot = ggplot(ny_noaa, aes(x = tmin, y = tmax)) +
+  geom_hex()+
+  theme_bw()+
+  theme(plot.title=element_text(size=10))+
+  xlab("Min Temperatures (degrees C)")+
+  ylab("Max Temperatures (degrees C)")+
+  ggtitle("Max Temperatures vs Min Temperatures for the Entire Data Set")
+
+#plot of snowfall distribution over time for values between 0 and 100 mm
+snow_0_100_plot = ny_noaa%>%
+  filter(snow<100&snow>0)%>%
+  ggplot(aes(x=year,y=snow))+
+  geom_boxplot()+
+  stat_summary(fun=mean,color="red",geom="point")+
+  theme(axis.text.x = element_text(size=8,angle=90,vjust = 0.5, hjust = 1),plot.title=element_text(size=10))+
+  xlab("Year")+
+  ylab("Snowfall (mm)")+
+  ggtitle("Distribution of Snowfall between 0 and 100 mm by year")
+
+tmax_tmin_plot/snow_0_100_plot
+```
+
+    ## Warning: Removed 1136276 rows containing non-finite values (stat_binhex).
 
 ![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-12-1.png)<!-- -->
 
-This plot shows the maximum and minimum temperatures for the full data
-set. Overall from both graphs we can see the same trend of a slight
-increase leading to a spike in temperature and then a decrease in
-temperature values. Also, we can see that there are a variety of
-different maximum and minimum temperatures as the lines at every time
-interval (corresponding to the station record) varies greatly. I think
-this plot definitely gives a good idea of the range of snowfall values
-for stations over time and summarizes the overall trend of snowfall very
-nicely.
-
-``` r
-data_snow_0_10 = ny_noaa%>%
-  filter(snow<10&snow>0)#named variable data_snow_0_10 because it only contains data from the ny_noaa data set where the snowfall is above 0 cm and below 10 cm (100 mm). 
-data_snow_0_10 = data_snow_0_10%>%
-  group_by(year)
-data_snow_0_10 = data.frame(table(pull(data_snow_0_10,year)))
-ggplot(data_snow_0_10,aes(x=Var1,y=Freq))+
-  geom_bar(stat="identity")+
-    theme_bw()+
-  theme(axis.text.x = element_text(size=8,angle=90),plot.title=element_text(size=11))+
-  xlab("Year")+
-  ylab("Frequency of Snowfall between 0 and 10 cm (100 mm)")+
-  ggtitle("Distribution of Snowfall between 0 and 10 cm or 100 mm for every year")
-```
-
-![](p8105_hw3_as6183_files/figure-gfm/unnamed-chunk-13-1.png)<!-- -->
-From the graph above, it can be seen that there is a significant trend
-upward in the amount of times snowfall between 0 and 100 mm was recorded
-starting in 1998. This could be due to a decrease in snowfall from 1998
-onwards when compared to previous years, thus causing more values
-between 0 and 100 mm to be recorded by weather stations. This makes
-sense due to climate change and global warming that has been occurring
-over the past several years.
+This plot shows the maximum versus minimum temperatures for the full
+data set on top and the distribution of snowfall values between 0 and
+100 mm by year on the bottom. From the first plot of maximum vs minimum
+temperatures we can see that there is a significant concentration of
+data points that have similar maximum and minimum temperatures,
+showcased by the lighter blue in the center of the graph. From the
+second plot we can see that the median amount of snowfall between 0 and
+100 mm is pretty consistent over the years. I also plotted the mean on
+the boxplots, showcased by the red dot in each box for each year, which
+can help show which years had extreme snowfall values as the mean is
+more prone to change when outliers are present when compared to the
+median. For example, 1993 and 1994 had a mean that was much larger than
+the median which could indicate that there are some outliers in those
+years that are much higher than the rest of the values.
